--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "christophe/poo",
+    "description" : "Une application qui permet de créer des cartes et de les visdualiser",
     "type": "project",
     "autoload": {
         "psr-4": {
